fix scrollbar problem of pre tag

--- a/static/css/niu2.css
+++ b/static/css/niu2.css
@@ -8,6 +8,7 @@
 pre {
     word-break: normal;
     word-wrap: normal;
+    position: relative;
 }
 
 code {
